bk_ida/gccida/c1/reg_overlap_mentioned_for_reload_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_overlap_mentioned_for_reload_p/src/reload.c:6718:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)rtx->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_overlap_mentioned_for_reload_p/src/reload.c:6724:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v10.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_overlap_mentioned_for_reload_p/src/reload.c:6726:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v5)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_overlap_mentioned_for_reload_p/src/reload.c:6737:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v13 = ( ( unsigned int)( mode_class_0[v14] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_overlap_mentioned_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_overlap_mentioned_for_reload_p/src/reload.c:6763:50: error: expected expression
v6 = reg_overlap_mentioned_for_reload_p( *( rtx *)&rtx[1], in) != 0; 
                                                 ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_overlap_mentioned_for_reload_p/src/obj/reload.o] Error 1
